logs/brewery.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/brewery'...
Compiling './lib/python3.5/site-packages/brewery/common.py'...
***   File "./lib/python3.5/site-packages/brewery/common.py", line 57
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/brewery/dq'...
Listing './lib/python3.5/site-packages/brewery/ds'...
Compiling './lib/python3.5/site-packages/brewery/ds/xls_streams.py'...
***   File "./lib/python3.5/site-packages/brewery/ds/xls_streams.py", line 123
    except Exception, inst:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/brewery/nodes'...
Listing './lib/python3.5/site-packages/brewery/opendata'...
Listing './lib/python3.5/site-packages/brewery/server'...
Compiling './lib/python3.5/site-packages/brewery/streams.py'...
***   File "./lib/python3.5/site-packages/brewery/streams.py", line 662
    except Exception , e:
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/brewery/tests'...
Compiling './lib/python3.5/site-packages/brewery/tests/test_data_quality.py'...
***   File "./lib/python3.5/site-packages/brewery/tests/test_data_quality.py", line 79
    print "DISTINCT: %s" % distinct
                       ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/brewery/tests/test_node_stream.py'...
***   File "./lib/python3.5/site-packages/brewery/tests/test_node_stream.py", line 201
    except StreamRuntimeError, e:
                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/brewery-0.8.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Compiling './lib/python3.5/site-packages/tests/test_data_quality.py'...
***   File "./lib/python3.5/site-packages/tests/test_data_quality.py", line 79
    print "DISTINCT: %s" % distinct
                       ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/tests/test_node_stream.py'...
***   File "./lib/python3.5/site-packages/tests/test_node_stream.py", line 201
    except StreamRuntimeError, e:
                             ^
SyntaxError: invalid syntax

Listing './share'...
Listing './share/python-wheels'...
